--- a/airplane.css
+++ b/airplane.css
@@ -207,15 +207,17 @@ nav img {
 
 #bio h1 {
     color: #f76922;
-
+    background-color: #F8F0E3;
     font-size: 2.5em;
-    padding-bottom: 1em;
+    margin-bottom: 0.5em;
+    padding: 0.5em;
     text-align: center;
 }
 
 #bio p {
     color: #f76922;
-
+    background-color: #F8F0E3;
+    padding: 0.5em;
     line-height: 1.5em;
     font-size: 1.5em;
     text-align: center;
