--- a/airplane.css
+++ b/airplane.css
@@ -233,7 +233,7 @@ nav img {
 #heading h1 {
     padding-top: 3em;
     font-size: 1.8em;
-    padding-left: 1.2em;
+    margin: 0.5em;
     color: #3b3d3f;
 }
 
